# mcdonalds-optimizer

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build-and-deploy.yaml  main-to-release.yaml  preprocessing-data.yaml
public/data/: nutrient.json  product_menu.json
scripts/: init.sh
src/: main.py
