[project]
name = "mcdonalds-optimizer"
version = "0.1.0"
description = "Optimize McDonald's menu choices."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "altair==5.2.0",
    "attrs==23.2.0",
    "blinker==1.7.0",
    "cachetools==5.3.3",
    "certifi==2024.2.2",
    "cffi==1.15.1",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "gitdb==4.0.11",
    "gitpython==3.1.42",
    "idna==3.6",
    "jinja2==3.1.3",
    "jsonschema==4.21.1",
    "jsonschema-specifications==2023.12.1",
    "markdown-it-py==3.0.0",
    "markupsafe==2.1.5",
    "mdurl==0.1.2",
    "mip==1.15.0",
    "numpy==1.26.4",
    "packaging==23.2",
    "pandas==2.2.1",
    "pillow==10.2.0",
    "protobuf==4.25.3",
    "pyarrow==15.0.2",
    "pycparser==2.21",
    "pydeck==0.8.1b0",
    "pygments==2.17.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.1",
    "referencing==0.34.0",
    "requests==2.31.0",
    "rich==13.7.1",
    "rpds-py==0.18.0",
    "six==1.16.0",
    "smmap==5.0.1",
    "streamlit==1.32.2",
    "tenacity==8.2.3",
    "toml==0.10.2",
    "toolz==0.12.1",
    "tornado==6.4",
    "typing-extensions==4.10.0",
    "tzdata==2024.1",
    "urllib3==2.2.1",
    "watchdog==4.0.0",
]

[tool.uv]
package = false
